--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@simonwep/pickr": "^1.4.0",
+    "chroma-js": "^2.0.4",
     "core-js": "^2.6.5",
+    "two.js": "https://github.com/jonobr1/two.js",
     "vue": "^2.6.10",
+    "vue-material": "^1.0.0-beta-11",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
