--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,10 @@
 steps:
-- name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy"]
+- name: node
+  entrypoint: yarn
+  args: ['install']
+- name: node
+  entrypoint: yarn
+  args: ['build']
+- name: gcr.io/cloud-builders/gcloud
+  args: ['app', 'deploy']
 timeout: "1600s"
