--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "two.js": "https://github.com/jonobr1/two.js",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
-    "vuetify": "^2.0.0"
+    "vuetify": "^2.0.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
