--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@simonwep/pickr": "^1.4.0",
     "chroma-js": "^2.0.4",
+    "codemirror": "^5.49.2",
     "core-js": "^2.6.5",
     "two.js": "https://github.com/jonobr1/two.js",
     "vue": "^2.6.10",
