--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chroma-js": "^2.0.4",
     "codemirror": "^5.49.2",
     "core-js": "^2.6.5",
+    "json-formatter-js": "^2.2.1",
     "two.js": "https://github.com/jonobr1/two.js",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
