--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "codemirror": "^5.49.2",
     "core-js": "^2.6.5",
     "json-formatter-js": "^2.2.1",
+    "mathjs": "^6.2.5",
     "two.js": "https://github.com/jonobr1/two.js",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
