Upgrade dependencies and address warnings

--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "chroma-js": "^2.0.4",
     "codemirror": "^5.49.2",
     "core-js": "^2.6.5",
-    "json-formatter-js": "^2.2.1",
+    "json-formatter-js": "^2.3.3",
     "mathjs": "^6.2.5",
     "two.js": "https://github.com/jonobr1/two.js",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
+    "vue-router": "^3.1.5",
     "vuetify": "^2.0.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^4.2.2",
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
