Add routing and home page

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "chroma-js": "^2.0.4",
     "codemirror": "^5.49.2",
     "core-js": "^2.6.5",
+    "html2canvas": "^1.0.0-rc.5",
     "json-formatter-js": "^2.3.3",
     "mathjs": "^6.2.5",
+    "path": "^0.12.7",
     "two.js": "https://github.com/jonobr1/two.js",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
