Implement Gallery and basic modularization
Organized code into different directories, and an easy way to see them. Also
modified MobjectLab to handle code other than example_scenes.py.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@simonwep/pickr": "^1.4.0",
+    "axios": "^0.19.2",
     "chroma-js": "^2.0.4",
     "codemirror": "^5.49.2",
     "core-js": "^2.6.5",
