--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.19.2",
     "chroma-js": "^2.0.4",
     "codemirror": "^5.49.2",
-    "core-js": "^2.6.5",
+    "core-js": "^3.6.4",
     "html2canvas": "^1.0.0-rc.5",
     "json-formatter-js": "^2.3.3",
     "mathjs": "^6.2.5",
@@ -22,21 +22,21 @@
     "vue-material": "^1.0.0-beta-11",
     "vue-prism-editor": "^0.5.1",
     "vue-router": "^3.1.5",
-    "vuetify": "^2.0.0",
+    "vuetify": "^2.2.11",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-babel": "~4.2.3",
     "@vue/cli-plugin-eslint": "^4.2.2",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-service": "~4.2.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.17.4",
-    "sass-loader": "^7.1.0",
-    "vue-cli-plugin-vuetify": "^0.6.3",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2"
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
