Remove vuex, add code to docs page

--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "two.js": "https://github.com/jonobr1/two.js",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
-    "vue-prism-editor": "^0.5.1",
+    "vue-prism-component": "^1.1.1",
     "vue-router": "^3.1.5",
-    "vuetify": "^2.2.11",
-    "vuex": "^3.1.1"
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.3",
