--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@simonwep/pickr": "^1.4.0",
     "axios": "^0.19.2",
     "chroma-js": "^2.0.4",
-    "codemirror": "^5.49.2",
+    "codemirror": "^5.52.2",
     "core-js": "^3.6.4",
     "html2canvas": "^1.0.0-rc.5",
     "json-formatter-js": "^2.3.3",
     "mathjs": "^6.2.5",
     "path": "^0.12.7",
+    "three": "^0.115.0",
+    "three.meshline": "https://github.com/eulertour/THREE.MeshLine.git",
     "two.js": "https://github.com/jonobr1/two.js",
     "vue": "^2.6.10",
+    "vue-codemirror": "^4.0.6",
     "vue-material": "^1.0.0-beta-11",
     "vue-prism-component": "^1.1.1",
     "vue-router": "^3.1.5",
